--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "128": "icon128.png"
   },
   "content_scripts": [{
-    "matches": ["https://twitter.com/*"],
+    "matches": ["https://twitter.com/*", "https://x.com/*"],
     "js": [
       "content.js"
     ]
